# rtist

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  Newick_Validator.py  README.md  bitsnbobs.pyx  lookup_table.c  lookup_table.h  median_tree_reconstruction.py  median_triplet.py  median_triplet_version.py  mediantriplet.py  mtrip.yaml  pyproject.toml  scores.c  scores.h  scores_omp.c  setup.py  snoob.py  triplet_omp_py.pyx  trippy.yaml  tripthrough.py
.github/workflows/: build.yml
examples/: example.nwk  example_5tips.nwk  large_example.nwk
lib/: Makefile  lookup_table.c  lookup_table.h  scores.c  scores_omp.c  scores_omp.h  weights_omp.c  weights_omp.h
lib/progressbar/: Makefile
scripts/: combine_weights  mediantriplet  mtrip  mtrip-combine  mtrip-suboptimal  tripthrough
src/mtrip/: __init__.py  bitsnbobs.pyx  median_tree_reconstruction.py  median_triplet_version.py  scipy_comb.pyx  snoob.py  triplet_omp_py.pyx
src/mtrip/_c_ext/: CMakeLists.txt  lookup_table.c  lookup_table.h  weights_omp.c  weights_omp.h
src/mtrip/cli/: __init__.py  mtrip_cmd.py  mtrip_combine_cmd.py  mtrip_suboptimal_cmd.py
src/trippy/: bitsnbobs.pyx  median_tree_reconstruction.py  scipy_comb.pyx  snoob.py
tests/: README.md  __init__.py  run_tests.py  test_bipartitions.py  test_cli.py  test_median_reconstruction.py  test_newick_parsing.py  test_triplet_omp.py
tests/test_data/: small_test.nwk
