[build-system]
requires = ["setuptools>=42", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtrip"
version = "0.3.0beta"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPLv3" }
authors = [
    { name = "Gleb Zhelezov", email = "gleb@glebzh.com" }
]
description = "A package for finding the exact median triplet tree (in the context of phylogenetics)"
dependencies = [
    "Cython>=3.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/glebzhelezov/rtist"
Issues = "https://github.com/glebzhelezov/rtist/issues"

[project.optional-dependencies]
signals = ["cysignals"]
dev = [
    "pytest>=6.0",
    "black",
    "mypy"
]

[project.scripts]
mtrip = "mtrip.cli.mtrip_cmd:main"
mtrip-combine = "mtrip.cli.mtrip_combine_cmd:main"
mtrip-suboptimal = "mtrip.cli.mtrip_suboptimal_cmd:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
build-verbosity = 1
skip = ["pp*", "*-musllinux*"]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
archs = ["x86_64", "arm64"]
